# RazeEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/Raze/core/: Application.h  Engine.h  Logger.h  VulkanInstance.h  WindowManager.h
include/Raze/renderer/: Renderer.h
source/: main.cpp
source/core/: Application.cpp  Engine.cpp  VulkanInstance.cpp  WindowManager.cpp
source/renderer/: Renderer.cpp
